--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
 
     <section class="normal">
+        
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -23,6 +24,11 @@
             Antes que eu caduque <br>
             Vou dizer tudo em poesia.
         </p>
+    <div>
+        <img class="testeimg" src="imagens/background002.jpg" alt="teste">
+        <img class="testeimg" src="imagens/background001.jpg" alt="teste01">
+        <img class="testeimg" src="imagens/background001.jpg" alt="teste02">
+    </div>
     </section>
 
 
