--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Antes que eu caduque <br>
             Vou dizer tudo em poesia.
         </p>
-    <div>
+    <div class="centro">
         <img class="testeimg" src="imagens/background002.jpg" alt="teste">
         <img class="testeimg" src="imagens/background001.jpg" alt="teste01">
         <img class="testeimg" src="imagens/background001.jpg" alt="teste02">
