--- a/index.html
+++ b/index.html
@@ -69,13 +69,18 @@
 
     <section class="imagem" id="img02">
         <p>
-            Tenho saudade das cartas <br>
+            <!--Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
             Só chegava no Verão <br>
             Mas matava a saudade <br>
             Era texto de verdade <br>
-            Nas linhas do coração.
+            Nas linhas do coração.--> 
+            <div class="centro">
+                <img class="testeimg" src="imagens/background002.jpg" alt="teste">
+                <img class="testeimg" src="imagens/background001.jpg" alt="teste01">
+                <img class="testeimg" src="imagens/background001.jpg" alt="teste02">
+            </div>
         </p>
     </section>
 
