8 de abril GERAL

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <section class="normal">
-        
+        <!--
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -23,10 +23,16 @@
             Twitter e Facebook <br>
             Antes que eu caduque <br>
             Vou dizer tudo em poesia.
-        </p>
+        </p> -->
     <div class="centro">
-        <img class="testeimg" src="imagens/background002.jpg" alt="teste">
-        <img class="testeimg" src="imagens/background001.jpg" alt="teste01">
+        <a href="teste.html" target="_blank">
+            <img class="testeimg" src="imagens/background002.jpg" alt="teste">
+        </a>
+
+        <a href="teste.html">
+            <img class="testeimg" src="imagens/background001.jpg" alt="teste01">
+        </a>
+        
         <img class="testeimg" src="imagens/background001.jpg" alt="teste02">
     </div>
     </section>
